--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Learn2">
 
-            <!-- android:configChanges="orientation|screenSize" -->
+             android:configChanges="orientation|screenSize"
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
